feat(workflow): add build and push workflow for Docker images with support for DigitalOcean and Azure fix(kubernetes): update backend and frontend images to use DigitalOcean Container Registry

--- a/kubernetes/backend-manifest.yaml
+++ b/kubernetes/backend-manifest.yaml
@@ -24,7 +24,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: cometops.azurecr.io/final/backend:latest
+          image: registry.digitalocean.com/expensyregistry/expensy/backend:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 8706
