--- a/kubernetes/monitoring-grafana.yaml
+++ b/kubernetes/monitoring-grafana.yaml
@@ -18,6 +18,10 @@ spec:
       releaseName: grafana
       values: |
         # Admin credentials
+        admin:
+          existingSecret: ""
+          userKey: admin-user
+          passwordKey: admin-password
         adminUser: admin
         adminPassword: admin  # Change this in production!
 
